--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,19 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Types of Mania Configurator</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+  <a class="navbar-brand" href="#">
+    Types of Mania Configurator
+    <span *ngIf="version"> {{ version }}</span>
+  </a>
 
   <form class="form-inline my-2 my-lg-0 ml-auto">
     <input type="file" id="file-selector" accept=".yml" class="d-none" (change)="loadFile($event)" #fileLoad>
     <button class="btn btn-outline-success my-2 my-sm-0" (click)="fileLoad.click()">Load config.yml</button>
     <button class="btn btn-outline-success my-2 my-sm-0 ml-3" [disabled]="!config">Save config.yml</button>
-    <button class="btn btn-outline-success my-2 my-sm-0 ml-3" [disabled]="!config" [class.d-none]="!electronService.isElectron">Generate PAK</button>
+    <button class="btn btn-outline-success my-2 my-sm-0 ml-3" [disabled]="!config" [class.d-none]="!electronService.isElectron" (click)="generatePak()">Generate .pak</button>
   </form>
 </nav>
 
 <nav ngbNav #nav="ngbNav" class="nav-tabs">
+
   <ng-container ngbNavItem>
     <a ngbNavLink>Basics</a>
     <ng-template ngbNavContent>
@@ -48,59 +52,122 @@
             <input type="text" class="form-control" placeholder="Install To" [(ngModel)]="config.installTo">
           </div>
         </div>
+
+        <div class="row mt-3">
+          <div class="col-3 left-side">
+            <span ngbTooltip="The location of UnrealPak.exe." placement="right">UnrealPak</span>
+          </div>
+          <div class="col-9">
+            <input type="text" class="form-control" placeholder="UnrealPak" [(ngModel)]="unrealPak">
+          </div>
+        </div>
+
+        <div class="row mt-3">
+          <div class="col-3 left-side">
+          </div>
+          <div class="col-9">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="dumpStats" id="dumpStats">
+              <label class="form-check-label" for="dumpStats" ngbTooltip="Include a CSV of all enemy stats with the build." placement="right">
+                Dump Stats
+              </label>
+            </div>
+          </div>
+        </div>
       </div>
     </ng-template>
   </ng-container>
+
   <ng-container ngbNavItem [disabled]="!config">
-    <a ngbNavLink>Global Stats</a>
+    <a ngbNavLink>Base Stats</a>
     <ng-template ngbNavContent>
       <div class="blank-slate" *ngIf="!config">
-
+        Load a config.yml file first
       </div>
       
       <div class="p-2" *ngIf="config">
-        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth
-          master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro
-          keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat
-          salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+        <div class="explainer">
+          Base modifiers are essentially global modifiers.
+          If you don't specify a modifier in another category, the one here will be used.
+        </div>
+        <app-stat-editor [config]="config" subkey="base" (updateConfig)="updateConfig()"></app-stat-editor>
       </div>
     </ng-template>
   </ng-container>
+
+  <ng-container ngbNavItem [disabled]="!config">
+    <a ngbNavLink>Boss Stats</a>
+    <ng-template ngbNavContent>
+      <div class="blank-slate" *ngIf="!config">
+        Load a config.yml file first
+      </div>
+      
+      <div class="p-2" *ngIf="config">
+        <div class="explainer">
+          Boss modifiers are used for modifying boss encounter stats.
+          This mostly applies to the base creature with the healthbar.
+        </div>
+        <app-stat-editor [config]="config" subkey="boss" (updateConfig)="updateConfig()"></app-stat-editor>
+      </div>
+    </ng-template>
+  </ng-container>
+
   <ng-container ngbNavItem [disabled]="!config">
     <a ngbNavLink>Enemy Stats</a>
     <ng-template ngbNavContent>
       <div class="blank-slate" *ngIf="!config">
-
+        Load a config.yml file first
       </div>
       
       <div class="p-2" *ngIf="config">
-        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth
-          master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro
-          keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat
-          salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+        <div class="explainer">
+          Enemy modifiers are used for almost every non-boss enemy in the game.
+          This is mostly enemies you find in the field.
+        </div>
+        <app-stat-editor [config]="config" subkey="monster" (updateConfig)="updateConfig()"></app-stat-editor>
       </div>
     </ng-template>
   </ng-container>
+
   <ng-container ngbNavItem [disabled]="!config">
     <a ngbNavLink>Shinju Stats</a>
     <ng-template ngbNavContent>
       <div class="blank-slate" *ngIf="!config">
-
+        Load a config.yml file first
       </div>
       
       <div class="p-2" *ngIf="config">
-        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth
-          master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro
-          keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat
-          salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+        <div class="explainer">
+          Shinju modifiers apply to a set of enemies we don't entirely grasp yet.
+          A lot of them are boss-fight-related, but how specifically is uncertain.
+        </div>
+        <app-stat-editor [config]="config" subkey="shinju" (updateConfig)="updateConfig()"></app-stat-editor>
       </div>
     </ng-template>
   </ng-container>
+
+  <ng-container ngbNavItem [disabled]="!config">
+    <a ngbNavLink>Part Stats</a>
+    <ng-template ngbNavContent>
+      <div class="blank-slate" *ngIf="!config">
+        Load a config.yml file first
+      </div>
+      
+      <div class="p-2" *ngIf="config">
+        <div class="explainer">
+          Part modifiers apply to a set of creatures used for boss fights.
+          Specifically, most of them are hands, tails, heads, etc.
+        </div>
+        <app-stat-editor [config]="config" subkey="part" (updateConfig)="updateConfig()"></app-stat-editor>
+      </div>
+    </ng-template>
+  </ng-container>
+
   <ng-container ngbNavItem [disabled]="!config">
     <a ngbNavLink>Specific Stats</a>
     <ng-template ngbNavContent>
       <div class="blank-slate" *ngIf="!config">
-
+        Load a config.yml file first
       </div>
       
       <div class="p-2" *ngIf="config">
