--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@ html, body {
 
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+
+  overflow-x: hidden;
 }
 
 .blank-slate {
@@ -20,6 +22,18 @@ html, body {
   z-index: 9999;
   left: 0;
   top: 70px;
+}
+
+.explainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  border-bottom: 1px solid #dee2e6;
 }
 
 .left-side {
