--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand">
     Types of Mania Configurator
     <span *ngIf="version"> {{ version }}</span>
   </a>
